[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "briq-protocol"
description = "briq NFT protocol contracts & python helpers"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.9.0"
license = "MIT"
keywords = []
authors = [
  { name = "briq", email = "founders@sltech.company" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cairo-lang",
]

[project.urls]
Documentation = "https://github.com/briqNFT/briq-protocol#readme"
Issues = "https://github.com/briqNFT/briq-protocol/issues"
Source = "https://github.com/briqNFT/briq-protocol"

[tool.hatch.build]
only-include = ["briq_protocol", "docs", "tests"]
[tool.hatch.build.force-include]
"artifacts" = "briq_protocol/artifacts"
"contracts" = "briq_protocol/contracts"

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "flake8>=6.0",
  #"cairo-nile>=0.9",
  #"starknet-devnet@git+ssh://git@github.com/Shard-Labs/starknet-devnet.git",
  "starknet-py>=0.15.2",
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.hatch.envs.devnet]
python = "3.9"
dependencies = [
  "starknet-devnet@git+ssh://git@github.com/Shard-Labs/starknet-devnet.git",
]

[tool.hatch.envs.devnet.scripts]
devnet = "starknet-devnet"
deploy = "starknet declare --contract ./target/dev/briq_protocol_AttributesRegistry.sierra.json --wallet=starkware.starknet.wallets.open_zeppelin.OpenZeppelinAccount --compiler_dir ./target/debug"
